--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ canvas {
 <div id="snow-container"></div>
 	
 	<audio controls="controls" class="song" loop="true" autoplay="autoplay">
-		<source src="./assets/01.flac"></source>
+		<source src="./assets/01.mp3"></source>
 	</audio>
 	
 	
