--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ canvas {
 <body>
 <div id="snow-container"></div>
 	
-	<audio controls="controls" class="song" loop="true" autoplay="autoplay">
+<!-- 	<audio controls="controls" class="song" loop="true" autoplay="autoplay">
 		<source src="./assets/01.mp3"></source>
-	</audio>
+	</audio> -->
 	
 	
 
